add new bio site

--- a/index.html
+++ b/index.html
@@ -1,9 +1,82 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Заголовок</title>
+    <meta charset='utf-8'>
+    <title>CodWiz | Links</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" type="image/x-icon" href="/assets/Lovedol.ico">
+    <video id="bg-video" muted loop autoplay poster="./assets/poster.png">
+        <source src="./assets/video/Darling-In-The-Franxx-_4K_.webm" type="video/webm">
+        <source src="./assets/video/Darling In The Franxx [4K].mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+    <script type="module" src="./js/main.js"></script>
 </head>
+
 <body>
-	"Hello World!"
-</body>
+    <div id="vanta-bg">
+        <header>
+            <div>
+                <img src="./assets/profile_picture.jpg" alt="Profile picture" />
+            </div>
+            <h3> CodWiz </h3>
+            <p>Developer │ Anime guy</p>
+        </header>
+
+        <main>
+
+            <section>
+                <div>
+                    <div class="stream_buttons_list">
+                        <ul>
+                            <li class="stream_buttons">
+                                <a target="_blank" href="https://github.com/C0dWiz" style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
+                                    <img src="./assets/icon/GitHub.svg" height="20" style="margin-right: 20px;" />
+                                    GitHub
+                                    <img src="./assets/open.svg" width="20" height="20" style="margin-left: auto" />
+                                </a>
+                            </li>
+
+                            <li class="stream_buttons">
+                                <a target="_blank" href="https://dev_kitten.t.me" style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
+                                    <img src="./assets/icon/Telegram.svg" height="20" style="margin-right: 20px;" />
+                                    Telegram
+                                    <img src="./assets/open.svg" width="20" height="20" style="margin-left: auto" />
+                                </a>
+                            </li>
+                            <li class="stream_buttons">
+                                <a target="_blank" href="https://vk.com/codwiz" style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
+                                    <img src="./assets/icon/VK.svg" height="20" style="margin-right: 20px;" />
+                                    Вконтакте
+                                    <img src="./assets/open.svg" width="20" height="20" style="margin-left: auto" />
+                                </a>
+                            </li>
+                            </a>
+                            <li class="link_button_highlight">
+                                <a target="_blank" href="about.html" data-info="pre-save-message" style="color: #000000">
+                                    Обо мне
+                                </a>
+                            </li>
+                            <center>
+                                <p>Вот столько раз посещали этот сайт: </p>
+                                <img src="https://count.getloli.com/get/@:C0dWiz.github.io?theme=rule34" alt=":C0dWiz.github.io" />
+                            </center>
+                        </ul>
+                    </div>
+                </div>
+                </li>
+                </ul>
+    </div>
+    </section>
+
+    </main>
+
+    <footer>
+        <!-- Пожалуйста, не меняй это! Если будешь делать Fork, просто поставь рядом свой ник :) -->
+        <p>Created by CodWiz.</p>
+        <a href="https://github.com/C0dWiz/C0dWiz.github.io">fork this page on GitHub</a>
+    </footer>
+
 </html>
