--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 
 <head>
     <meta charset='utf-8'>
     <title>CodWiz | Links</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1, viewport-fit=cover'>
+    <meta name="theme-color" content="#16161D">
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/x-icon" href="/assets/Lovedol.ico">
-    <video id="bg-video" muted loop autoplay poster="./assets/poster.png">
+
+    <video id="bg-video" muted loop autoplay playsinline poster="./assets/poster.png">
         <source src="./assets/video/Darling-In-The-Franxx-_4K_.webm" type="video/webm">
         <source src="./assets/video/Darling In The Franxx [4K].mp4" type="video/mp4">
     </video>
+
     <div class="overlay"></div>
+
+    <link rel="preload" href="./fonts/Raleway-Light.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="./assets/profile_picture.jpg" as="image">
+
     <script type="module" src="./js/main.js"></script>
 </head>
 
@@ -26,7 +34,6 @@
         </header>
 
         <main>
-
             <section>
                 <div>
                     <div class="stream_buttons_list">
@@ -63,20 +70,12 @@
                                 <p>Вот столько раз посещали этот сайт: </p>
                                 <img src="https://count.getloli.com/get/@:C0dWiz.github.io?theme=rule34" alt=":C0dWiz.github.io" />
                             </center>
-                        </ul>
-                    </div>
-                </div>
-                </li>
-                </ul>
+        </main>
+
+        <footer>
+            <p>Создано CodWiz.</p>
+        </footer>
     </div>
-    </section>
-
-    </main>
-
-    <footer>
-        <!-- Пожалуйста, не меняй это! Если будешь делать Fork, просто поставь рядом свой ник :) -->
-        <p>Created by CodWiz.</p>
-        <a href="https://github.com/C0dWiz/C0dWiz.github.io">fork this page on GitHub</a>
-    </footer>
+</body>
 
 </html>
